--- a/ApiRequest/src/app/app.component.html
+++ b/ApiRequest/src/app/app.component.html
@@ -3,3 +3,4 @@
 <button (click)="obterSomenteUm()">Obter somente um</button>
 <button (click)="adicionarCarro()">Adicionar</button>
 <button (click)="atualizar()">Atualizar</button>
+<button (click)="remover()">Remover</button>
